* bug #16555, remove scrollbar when drag item to outside of kanban.

--- a/module/execution/css/executionkanban.css
+++ b/module/execution/css/executionkanban.css
@@ -7,4 +7,4 @@
 #kanbanList .kanban-item.link-block > a {cursor: move;}
 #kanbanList .kanban-lane + .kanban-lane {margin-top: 2px!important;}
 
-.kanban.kanban-dragging {overflow: hidden;}
+.kanban.kanban-dragging {overflow: hidden!important;}
